Hämtar och lagrar data från RSS, uppdatering av RSS fungerar med ett tidsintervall. Kategorier läggs till och kan sparas. (Behöver kunna tas bort och ändras)

--- a/Podcast Models/Podcast Models.csproj
+++ b/Podcast Models/Podcast Models.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\ISerialize.cs" />
+    <Compile Include="Models\Categories.cs" />
     <Compile Include="Models\PodcastCollection.cs" />
     <Compile Include="Models\Episode.cs" />
     <Compile Include="Models\Podcast.cs" />
