--- a/Podcast BLL/Podcast BLL.csproj
+++ b/Podcast BLL/Podcast BLL.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormHandler.cs" />
+    <Compile Include="CategoryHandler.cs" />
     <Compile Include="PodcastHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
