Everything done, ez XD

--- a/Podcast DAL/Podcast DAL.csproj
+++ b/Podcast DAL/Podcast DAL.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RSS\JsonReader.cs" />
+    <Compile Include="RSS\JsonWriter.cs" />
     <Compile Include="RSS\PodcastReader.cs" />
     <Compile Include="RSS\PodcastWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
